# reverse_image_search_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Pipfile  READEME.md  README.md  USAGE.md  config.example.json  docker-compose.yml  pixiv_auth.py  pyproject.toml  requirements.txt  run_bot.py
.github/workflows/: codeql-analysis.yml  docker-build.yml  docker-publish.yml  docker.yml  lint.yml  pythonapp.yml  test.yml
animu_image_search_bot/: bot.py  commands.py  image_search.py  settings.example.py  utils.py
animu_image_search_bot/uploaders/: base_uploader.py  file_system.py  ssh.py
deploy/: after_push
locales/: TODO.yml  telegram.yml
reverse_image_search/: app.py  utils.py
reverse_image_search/engines/: __init__.py  ascii2d.py  base.py  bing.py  google.py  iqdb.py  jpeg_metadata.py  metadata.py  png_metadata.py  saucenao.py  sogou.py  tineye.py  tracer.py  webp_metadata.py  yandex.py
reverse_image_search/providers/: __init__.py  base.py  booru.py  danbooru.py  pixiv.py
reverse_image_search_bot/: bot.py  commands.py  image_search.py  metrics.py  settings.example.py  settings.py  start.md  utils.py
reverse_image_search_bot/abuse_report/: __init__.py  crypto.py  ncmec.py  prepare.py  server.py  video.py
reverse_image_search_bot/abuse_report/static/: report.html  reports.html
reverse_image_search_bot/commands/: __init__.py  feedback.py  handlers.py  onboarding.py  report.py  search.py  settings.py  utils.py
reverse_image_search_bot/config/: __init__.py  abuse.py  chat_config.py  db.py  pixiv_config.py  tracking.py  user_config.py
reverse_image_search_bot/engines/: __init__.py  animetrace.py  baidu.py  errors.py  generic.py  google.py  iqdb.py  pic_image_search.py  saucenao.py  shutterstock.py  tineye.py  trace.py  types.py  yandex.py
reverse_image_search_bot/engines/data_providers/: __init__.py  anilist.py  base.py  boorus.py  mangadex.py  pixiv.py
reverse_image_search_bot/engines/providers/: __init__.py  anilist.py  boorus.py  mangadex.py
reverse_image_search_bot/i18n/: __init__.py  ar.toml  de.toml  en.toml  es.toml  fr.toml  it.toml  ja.toml  pt.toml  ru.toml  zh.toml
reverse_image_search_bot/payments/: __init__.py  db.py  handlers.py  subscription.py
reverse_image_search_bot/texts/: credits.html  credits_1.html  credits_2.html  help.html  help.md  start.html  tips.html  tips.md
reverse_image_search_bot/uploaders/: __init__.py  base_uploader.py  file_system.py  ssh.py
reverse_image_search_bot/utils/: __init__.py  api.py  async_cache.py  helpers.py  tags.py  url.py
ris/: __main__.py  auto_search.py  common.py  data_provider.py  files.py  provider.py  provider_engines.py  redis.py  redis_data_types.py  redis_models.py  s3.py  search.py  search_engines.py  utils.py
src/: bot.rs  cli.rs  config.rs  error.rs  main.rs  redis.rs  types.rs
src/auto_search/: anilist.rs  mod.rs  search.rs  tracemoe.rs
src/core/: orchestrator.rs
src/display/: anime.rs  enriched.rs  fanart.rs  generic.rs  manga.rs  mod.rs
src/engines/: iqdb.rs  mod.rs  saucenao.rs  tracemoe.rs
src/files/: image.rs  local.rs  mod.rs  telegram.rs  upload.rs
src/handlers/: command.rs  file.rs  media.rs  mod.rs  search.rs
src/models/: enrichment.rs  mod.rs  search_hit.rs
src/providers/: anilist.rs  booru.rs  generic.rs  mangadex.rs  mod.rs
src/ris/: cache.py  cli.py  defaults.py  distributor.py  file.py  http.py  providers.py  search.py  text.py  types.py  utils.py
src/transformers/: mod.rs  text.rs  url.rs  video.rs
src/utils/: file.rs  keyboard.rs  locale.rs  mod.rs  upload.rs  video.rs
tests/: conftest.py  test_abuse_crypto.py  test_abuse_ncmec.py  test_abuse_prepare.py  test_abuse_reports.py  test_abuse_server.py  test_abuse_video.py  test_admin_commands.py  test_bot_commands_setup.py  test_bulk_report.py  test_commands.py  test_config_abuse.py  test_config_chat_config.py  test_config_db.py  test_config_tracking.py  test_data_providers.py  test_engine_error_reporting.py  test_engines_animetrace.py  test_engines_errors.py  test_engines_generic.py  test_engines_google.py  test_engines_pic_image_search.py  test_engines_saucenao.py  test_engines_trace.py  test_i18n.py  test_metrics.py  test_ncmec_preview.py  test_redis.py  test_redis_data_types.py  test_report_command.py  test_report_runner_persistence.py  test_settings.py  test_utils_async_cache.py  test_utils_helpers.py  test_utils_tags.py  test_utils_url.py
