[package]
name = "rbot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["json", "serde_json", "toml", "yaml"] }
log = "0.4.28"
mime = "0.3.17"
mime_guess = "2.0.5"
normalize-path = "0.2.1"
opencv = { version = "0.96.0", features = ["clang-runtime"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.23", features = ["multipart", "stream"] }
resolve-path = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
teloxide = { version = "0.17.0", features = ["macros"] }
teloxide_tests = "0.4.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.9.7"
