[package]
name = "rbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anilist_moe = { version = "0.2.1", git = "https://github.com/Nachtalb/anilist_moe.git", branch = "fix/set_external_link_fields_public" }
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive", "env"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = [
  "json",
  "serde_json",
  "toml",
  "yaml",
] }
futures = "0.3.31"
log = "0.4.28"
mime = "0.3.17"
mime_guess = "2.0.5"
normalize-path = "0.2.1"
opencv = { version = "0.96.0", features = ["clang-runtime"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.23", features = ["multipart", "stream"] }
resolve-path = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
strum_macros = "0.27.2"
teloxide = { version = "0.17.0", features = ["macros"] }
teloxide_tests = "0.4.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.9.7"
trace-moe = "1.0.1"
