[package]
name = "rbot"
version = "0.1.0"
edition = "2024"

[dependencies]
addr = "^0.15.6"
anilist_moe = { version = "^0.2.1", git = "https://github.com/Nachtalb/anilist_moe.git", branch = "fix/set_external_link_fields_public" }
anyhow = "^1.0.100"
async-trait = "^0.1.89"
booru = "^0.6.0"
clap = { version = "^4.5.48", features = ["derive", "env"] }
dashmap = "^6.1.0"
figment = { version = "^0.10.19", features = [
  "json",
  "serde_json",
  "toml",
  "yaml",
] }
futures = "^0.3.31"
image = { version = "^0.25", features = ["jpeg"] }
img_hash = { version = "^3.2.0", git = "https://github.com/Nachtalb/img_hash.git", branch = "chore/support-image-0.25.x" }
log = "^0.4.28"
mime = "^0.3.17"
mime_guess = "^2.0.5"
normalize-path = "^0.2.1"
once_cell = "^1.21.3"
opencv = { version = "^0.97.0", features = ["clang-runtime"] }
pretty_env_logger = "^0.5.0"
redis = { version = "^0.32.7", features = [
  "aio",
  "connection-manager",
  "json",
  "tokio-comp",
] }
regex = "^1.12.2"
reqwest = { version = "^0.12.23", features = ["multipart", "stream"] }
resolve-path = "^0.1.0"
rust-i18n = "3.1.5"
rustnao = "^0.3.4"
scraper = "^0.24.0"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.145", features = ["arbitrary_precision"] }
strum_macros = "^0.27.2"
teloxide = { version = "^0.17.0", features = ["macros"] }
teloxide_tests = "^0.4.0"
thiserror = "^2.0.17"
tokio = { version = "^1.47.1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
] }
toml = "^0.9.7"
trace-moe = "^1.0.1"

[profile.release]
lto = "fat"
opt-level = "s"
strip = true
