[tool.poetry]
name = "reverse-image-search"
version = "4.0.0a0"
description = "A Telegram bot that provides direct reverse image search links for various engines like Google, Yandex, SauceNAO, IQDB, and more. Send an image, sticker or video/gif, and get search results from multiple platforms. Supports auto search and offers various tips for better search results."
authors = ["Nachtalb <na@nachtalb.io>"]
license = "LGPL-3.0"
readme = "README.md"
packages = [
  { include = "ris", from = "src" },
  { include = "bot", from = "src" },
]
keywords = ["telegram", "reverse image search", "async", "python-telegram-bot"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Typing :: Typed",
]
homepage = "https://github.com/Nachtalb/reverse_image_search_bot"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^24.8.0"
ruff-lsp = "^0.0.54"
isort = "^5.13.2"
mypy = "^1.11.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
preview = true
target-version = ["py312"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
show_error_codes = true
pretty = true
strict = true

# [[tool.mypy.overrides]]
# module = "aiostream.*"
# ignore_missing_imports = "True"
