[project]
name = "reverse-image-search-bot"
version = "1.0.0"
description = "Discover https://t.me/reverse_image_search_bot, a convenient Telegram bot that delivers instant reverse image search engine links and in-app results upon receiving media, simplifying your quest for related images, sources, and additional information."
authors = [{name = "Nachtalb", email = "na@nachtalb.io"}]
license = {text = "LGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-magic==0.4.24",
    "validators==0.18.2",
    "python-telegram-bot[json,socks]==13.15",
    "gppt==1.6",
    "cleverdict==1.9.1",
    "paramiko[all]==2.9.2",
    "pixiv-api==1.0.0",
    "moviepy>=2.2.1",
    "pyopenssl==21.0.0",
    "emoji>=2.2.0",
    "user-agent>=0.1.10",
    "requests-html>=0.10.0",
    "lxml-html-clean>=0.1.0",
    "PicImageSearch>=3.12.0",
    "yarl>=1.8.2",
    "setuptools>=65.0.0,<82",
    "prometheus-client>=0.21.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython[black]>=8.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reverse_image_search_bot"]

[tool.black]
line-length = 120
target-version = ['py310']
experimental-string-processing = true
